--- a/config/settings.yml
+++ b/config/settings.yml
@@ -10,8 +10,8 @@ pictures:
   avatar_size: "128"
   avatar_small_size: "24"
 mailer:
-  default_mail: "no-reply@fdf-12.herokuapp.com"
-  sent_mail: "forder.info@gmail.com"
+  default_mail: "leductienttkt@gmail.com"
+  sent_mail: "leductienttkt@gmail.com"
 index:
   max_shops: 6
   max_products: 8
